2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (paint_menu):
	removed redundant code

2002-07-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	send Map/UnmapNotify before iconyfying, not after

2002-07-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleMapRequestKeepRaised):
	fake a MapNotify and then an UnmapNotify when a window is created iconic

	* fvwm/add_window.c (AddWindow):
	workaround for buggy TK menu positioning

	* fvwm/focus.c (CMD_WarpToWindow):
	fixed WarpToWindow with unmanaged windows

2002-07-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	ClickToFocus + ClickToFocusPassesClickOff now blocks event handling
	until the button is released again; this restores the old behaviour
	from 2.3.23 and before with click+drag and rxvt/aterm

2002-06-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (CoerceEnterNotifyOnCurrentWindow):
	fixed colourmap focus problem

2002-06-12  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	* configure.in:
	increased version to 2.4.9

2002-06-11  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/menus.c (CMD_CopyMenuStyle):
	fixed copying PopupOffset values in CopyMenuStyle
	* configure.in:
	reword message for the multibyte default

2002-06-10  Mikhael Goikhman  <migo@homemail.com>

	* libs/Strings.[ch]:
	added CopyStringWithQuotes, not perfect, but works for now

2002-06-06  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/module_interface.c (CMD_SendToModule):
	fixed SendToModule when the first parameter contains quotes

2002-06-05  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/placement.c (PlaceWindow):
	fixed CascadePlacement with huge windows (xterm -g 240x100),
	that were aligned to bottom-right instead of top-left

2002-06-03  olicha  <olivier.chapuis@free.fr>

	* fvwm/module_interface.c (make_named_packet):
	Fixed an write out of memory bug. This complete Mikhail Kruk patch
	related to named module packet
