@@ -1,5 +1,10 @@
 2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/events.c (WaitForButtonsUp):
+	fixed handling of button release events
+
+2002-07-10  Dominik Vogt  <dominik.vogt@gmx.de>
+
 	* fvwm/menus.c (paint_menu):
 	removed redundant code
 
